deploy/k3s/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nlp-dev
  labels:
    app.kubernetes.io/part-of: nlp-penyakit
    environment: dev
